# Arteta-bot

./: .env.dev  .gitignore  CLAUDE.md  PROGRESS.md  README.md  _debug_bytes.py  bot.disabled  bot.py  pyproject.toml  test_img_api.py
Docs/archive/: PROGRESS.md
Docs/dev/: chat-llm.md  chromadb-memory.md  daily-summary.md  developer-verification.md  favorability.md  image-generation.md  like-system.md  member-recognition.md  mute-toggle.md  overview.md  profile.md  ranking.md  science.md  swear.md  weekly-news.md
Docs/ops/: deployment.md  logging.md  server-setup.md  troubleshooting.md
Docs/user/: commands.md  features.md
data/: arteta_swears.json
deploy/: Dockerfile  README.md  deploy_docker.sh  deploy_ecs.sh  deploy_quick.py  deploy_remote.py  docker-compose.yml  test_api.py
docs/: session-2026-05-06-personality-optimization.md
knowledge_base/: arsenal_knowledge_base.md  glossary.md
knowledge_base/documentary/: 01-locker-room-speeches.md
knowledge_base/philosophy/: 01-trust-the-process.md  02-player-development.md
knowledge_base/press/: 01-classic-quotes.md  02-post-match.md
knowledge_base/tactics/: 01-inverted-fullback.md  02-high-press.md  03-attacking-patterns.md
plugins/: arteta_admin.py  arteta_chat.py  arteta_cmath.py  arteta_daily.py  arteta_help.py  arteta_image.py  arteta_knowledge.py  arteta_like.py  arteta_memory.py  arteta_mute.py  arteta_render.py  arteta_standings.py  arteta_swear.py  arteta_tools.py  arteta_weekly.py
templates/: arteta_render.html
tests/: test_verify_features.py
tools/: verify_features.py
(+20 files in other folders)
