[project]
name = "arteta_bot"
version = "0.1.0"
description = "Arsenal Arteta Bot"
requires-python = ">=3.8"
dependencies = [
    "nonebot2",
    "nonebot-adapter-onebot",
    "nonebot-plugin-apscheduler",
    "httpx",
    "aiosqlite",
    "pillow",
    "pilmoji",
    "duckduckgo_search",
]

[tool.nonebot]
plugin_dirs = ["plugins"]
adapters = [
    {"name" = "OneBot V11", "module_name" = "nonebot.adapters.onebot.v11"}
]
